--- a/shoestrap.css
+++ b/shoestrap.css
@@ -73,3 +73,25 @@
     content: "";
     clear: both;
   } 
+
+  .navi{
+     
+      position: fixed;
+      top: 0;
+      width: 100%;
+      height: 30px;
+      background-color: blueviolet;
+      border: greenyellow;
+      border-width: 1px;
+      border-style: solid;
+  }
+
+  body{
+      padding-top: 30px;
+  }
+  .navi-item{
+      /* display: inline-block; */
+      height: 30px;
+      border-left-color: blue;
+      float: left;
+  }
